fix: added base, wizard, pagination RTL styles

--- a/src/patternfly/components/Pagination/pagination.scss
+++ b/src/patternfly/components/Pagination/pagination.scss
@@ -246,6 +246,8 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   .#{$pagination}.pf-m-compact & + & {
     margin-inline-start: var(--#{$pagination}--m-compact__nav-control--nav-control--MarginLeft);
   }
+
+  @include pf-v5-rtl("flip-inline");
 }
 
 // nav page element
