--- a/src/patternfly/base/_common.scss
+++ b/src/patternfly/base/_common.scss
@@ -23,3 +23,16 @@
   --#{$pf-global}--FontFamily--heading: var(--#{$pf-global}--FontFamily--heading--vf);
   --#{$pf-global}--FontFamily--monospace: var(--#{$pf-global}--FontFamily--monospace--vf);
 }
+
+// RTL helpers
+.#{$pf-prefix}m-dir-rtl {
+  direction: rtl;
+}
+
+.#{$pf-prefix}m-dir-ltr {
+  direction: ltr;
+}
+
+.#{$pf-prefix}m-rtl-flip-inline {
+  @include pf-v5-rtl("flip-inline");
+}
