fix: dual list selector rtl

--- a/src/patternfly/components/DualListSelector/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/dual-list-selector.scss
@@ -169,9 +169,13 @@ $pf-v5-c-dual-list-selector__item--MaxNesting: 10;
 
     .#{$dual-list-selector}__item-toggle {
       position: absolute;
-     inset-block-start: 0;
-     inset-inline-start: var(--#{$dual-list-selector}__list__list__item-toggle--Left);
+      inset-block-start: 0;
+      inset-inline-start: var(--#{$dual-list-selector}__list__list__item-toggle--Left);
       transform: translateX(var(--#{$dual-list-selector}__list__list__item-toggle--TranslateX));
+
+      @include pf-v5-rtl {
+        transform: translateX(calc(var(--#{$dual-list-selector}__list__list__item-toggle--TranslateX) * -1));
+      }
     }
   }
 
@@ -292,6 +296,11 @@ $pf-v5-c-dual-list-selector__item--MaxNesting: 10;
   align-self: center;
   padding-inline-start: var(--#{$dual-list-selector}__controls--PaddingLeft);
   padding-inline-end: var(--#{$dual-list-selector}__controls--PaddingRight);
+}
+
+.#{$dual-list-selector}__controls-item,
+.#{$dual-list-selector}__item-toggle-icon {
+  @include pf-v5-rtl("flip-inline");
 }
 
 .#{$dual-list-selector}__item-main {
