fix: added base, wizard, pagination RTL styles (#5860)

--- a/src/patternfly/components/Pagination/pagination.scss
+++ b/src/patternfly/components/Pagination/pagination.scss
@@ -237,6 +237,8 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
 
 // nav control
 .#{$pagination}__nav-control {
+  @include pf-v5-rtl("flip-inline");
+
   .#{$button} {
     padding-inline-start: var(--#{$pagination}__nav-control--c-button--PaddingLeft);
     padding-inline-end: var(--#{$pagination}__nav-control--c-button--PaddingRight);
