chore(Accordion,ExpandableSection): added more RTL styling

--- a/src/patternfly/components/Accordion/accordion.scss
+++ b/src/patternfly/components/Accordion/accordion.scss
@@ -230,6 +230,8 @@
 }
 
 .#{$accordion}__toggle-icon {
+  @include pf-v5-rtl('flip-inline');
+  
   transition: var(--#{$accordion}__toggle-icon--Transition);
 }
 
