--- a/src/patternfly/base/_globals.scss
+++ b/src/patternfly/base/_globals.scss
@@ -139,6 +139,11 @@
   }
 }
 
+// RTL
+@include pf-v5-rtl {
+  @include pf-v5-set-inverse;
+}
+
 // stylelint-disable no-invalid-position-at-import-rule
 @import "./themes/dark/globals";
 
