--- a/src/patternfly/components/Accordion/accordion.scss
+++ b/src/patternfly/components/Accordion/accordion.scss
@@ -230,8 +230,8 @@
 }
 
 .#{$accordion}__toggle-icon {
-  @include pf-v5-rtl('flip-inline');
-  
+  @include pf-v5-mirror-inline-rtl;
+
   transition: var(--#{$accordion}__toggle-icon--Transition);
 }
 
