--- a/src/patternfly/components/DualListSelector/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/dual-list-selector.scss
@@ -168,7 +168,7 @@ $pf-v5-c-dual-list-selector__item--MaxNesting: 10;
     --#{$dual-list-selector}__item-toggle--MarginBottom: 0;
 
     .#{$dual-list-selector}__item-toggle {
-      @include pf-v5-rtl-style(transform,
+      @include pf-v5-bidirectional-style(transform,
         translateX(var(--#{$dual-list-selector}__list__list__item-toggle--TranslateX)),
         translateX(#{pf-v5-calc-inverse(var(--#{$dual-list-selector}__list__list__item-toggle--TranslateX))}),
       );
