--- a/src/patternfly/components/Switch/switch.scss
+++ b/src/patternfly/components/Switch/switch.scss
@@ -88,9 +88,10 @@
       background-color: var(--#{$switch}__input--checked__toggle--BackgroundColor);
 
       &::before {
-        @include pf-v5-bidirectional-style(transform,
-          translateX(var(--#{$switch}__input--checked__toggle--before--TranslateX)),
-          translateX(#{pf-v5-calc-inverse(var(--#{$switch}__input--checked__toggle--before--TranslateX))})
+        @include pf-v5-bidirectional-style(
+          $prop: transform,
+          $ltr-val: translateX(var(--#{$switch}__input--checked__toggle--before--TranslateX)),
+          $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$switch}__input--checked__toggle--before--TranslateX))})
         );
       }
     }
